--- a/src/global.css
+++ b/src/global.css
@@ -10,6 +10,14 @@
 
     --green-500: #00875f;
 
+    --green-300: #00b37e ;
+
+}
+
+:focus {
+    outline: transparent;
+    box-shadow: 0 0 0 2px var(--green-300);
+    transition: 0.9s;
 }
 
 * {
