--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,9 +2,13 @@
     background-color: var(--gray-800);
     display: flex;
     justify-content: center;
+    align-items: center;
     padding: 1.25rem 0;
 }
 
+.header > img {
+    margin-right: 1rem;
+}
 .header img {
     height: 2rem;
 }
