--- a/src/components/Form/CommentForm.module.css
+++ b/src/components/Form/CommentForm.module.css
@@ -24,17 +24,17 @@
 }
 
 /* remover visibilidade do botao */
-.commentForm > footer {
+/* .commentForm > footer {
   visibility: hidden;
   max-height: 0;
   
-}
+} */
 
 /* aplica um estilo no elemento com foocus ativo */
-.commentForm:focus-within footer {
+/* .commentForm:focus-within footer  {
   visibility: visible;
   max-height: none;
-}
+} */
 
 .commentForm button[type=submit] {
   padding: 1rem 1.5rem;
@@ -48,8 +48,14 @@
   transition: background-color 0.5s;
 }
 
-.commentForm button[type=submit]:hover {
+
+.commentForm button[type=submit]:not(:disabled):hover {
   background: var(--green-300);
+}
+
+.commentForm button[type=submit]:disabled {
+  opacity: 0.4;
+  cursor: not-allowed;
 }
 
 .commentList {
